face image upload with name and insert into db

--- a/templates/add_face.html
+++ b/templates/add_face.html
@@ -23,6 +23,7 @@
 			<input type="file" name="file" autocomplete="off" required>
 		</p>
     </dl>
+		<input type="text" name="name" required/>
     <p>
 		<input type="submit" value="Submit">
 	</p>
