--- a/templates/detector.html
+++ b/templates/detector.html
@@ -29,7 +29,7 @@
 <form method="post" action="/detector" enctype="multipart/form-data">
     <dl>
 		<p>
-			<input type="file" accept="image/*" capture name="file" required>
+			<input type="file" accept="image/*" capture="camera" name="file" required>
 		</p>
     </dl>
     <p>
